# Seaglide

./: CMakeLists.txt
Float/: CMakeLists.txt  Float.cpp
Hoverfish/: CMakeLists.txt  Hoverfish.cpp
NRFControl/: NRFControl.ino
StepperControl/: StepperControl.ino
control/: control.ino
